fix commission spacing

--- a/src/sass/static/affiliates_ib.scss
+++ b/src/sass/static/affiliates_ib.scss
@@ -190,6 +190,10 @@
                     }
                 }
                 #ib {
+                    &-header {
+                        margin: 24px 0;
+                        font-size: 28px;
+                    }
                     table {
                         th, td {
                             text-align: left;
